checkerframework distractions